fix pixelated background on iOS by disabling fixed attachment on mobile

--- a/styles.css
+++ b/styles.css
@@ -134,6 +134,9 @@ ul a:hover {
   #hamburger-icon {
       display: block;
   }
+  body {
+      background-attachment: scroll;
+  }
 }
 
 .main {
